products: documentation with swagger
